PI_GCS2_DLL.h

BOOL PI_FUNC_DECL PI_DFH(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qDFH(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_GOH(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_qCST(int ID, const char* szAxes, char* szNames, int iBufferSize);
BOOL PI_FUNC_DECL PI_CST(int ID, const char* szAxes, const char* szNames);
BOOL PI_FUNC_DECL PI_qVST(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qPUN(int ID, const char* szAxes, char* szUnit, int iBufferSize);
BOOL PI_FUNC_DECL PI_SVO(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qSVO(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_SMO( int ID, const char*  szAxes, const int* piValueArray);
BOOL PI_FUNC_DECL PI_qSMO(int ID, const char* szAxes, int* piValueArray);
BOOL PI_FUNC_DECL PI_DCO(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qDCO(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_BRA(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qBRA(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_RON(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qRON(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_VEL(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qVEL(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_qTCV(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_ACC(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qACC(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_DEC(int ID, const char* szAxes, const double* pdValueArray);
BOOL PI_FUNC_DECL PI_qDEC(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_VCO(int ID, const char* szAxes, const BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qVCO(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_SPA(int ID, const char* szAxes, const unsigned int* iParameterArray, const double* pdValueArray, const char* szStrings);
BOOL PI_FUNC_DECL PI_qSPA(int ID, const char* szAxes, unsigned int* iParameterArray, double* pdValueArray, char* szStrings, int iMaxNameSize);
BOOL PI_FUNC_DECL PI_SEP(int ID, const char* szPassword, const char* szAxes, const unsigned int* iParameterArray, const double* pdValueArray, const char* szStrings);
BOOL PI_FUNC_DECL PI_qSEP(int ID, const char* szAxes, unsigned int* iParameterArray, double* pdValueArray, char* szStrings, int iMaxNameSize);
BOOL PI_FUNC_DECL PI_WPA(int ID, const char* szPassword, const char* szAxes, const unsigned int* iParameterArray);
BOOL PI_FUNC_DECL PI_RPA(int ID, const char* szAxes, const unsigned int* iParameterArray);
BOOL PI_FUNC_DECL PI_SPA_String(int ID, const char* szAxes, const unsigned int* iParameterArray, const char* szStrings);
BOOL PI_FUNC_DECL PI_qSPA_String(int ID, const char* szAxes, const unsigned int* iParameterArray, char* szStrings, int iMaxNameSize);
BOOL PI_FUNC_DECL PI_SEP_String(int ID, const char* szPassword, const char* szAxes, const unsigned int* iParameterArray, const char* szStrings);
BOOL PI_FUNC_DECL PI_qSEP_String(int ID, const char* szAxes, unsigned int* iParameterArray, char* szStrings, int iMaxNameSize);
BOOL PI_FUNC_DECL PI_STE(int ID, const char* szAxes, const double* dOffsetArray);
BOOL PI_FUNC_DECL PI_qSTE(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_IMP(int ID, const char*  szAxes, const double* pdImpulseSize);
BOOL PI_FUNC_DECL PI_IMP_PulseWidth(int ID, char cAxis, double dOffset, int iPulseWidth);
BOOL PI_FUNC_DECL PI_qIMP(int ID, const char* szAxes, double* pdValueArray);
BOOL PI_FUNC_DECL PI_SAI(int ID, const char* szOldAxes, const char* szNewAxes);
BOOL PI_FUNC_DECL PI_qSAI(int ID, char* szAxes, int iBufferSize);
BOOL PI_FUNC_DECL PI_qSAI_ALL(int ID, char* szAxes, int iBufferSize);
BOOL PI_FUNC_DECL PI_CCL(int ID, int iComandLevel, const char* szPassWord);
BOOL PI_FUNC_DECL PI_qCCL(int ID, int* piComandLevel);
BOOL PI_FUNC_DECL PI_AVG(int ID, int iAverrageTime);
BOOL PI_FUNC_DECL PI_qAVG(int ID, int *iAverrageTime);
BOOL PI_FUNC_DECL PI_qHAR(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qLIM(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_qTRS(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_FNL(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_FPL(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_FRF(int ID, const char* szAxes);
BOOL PI_FUNC_DECL PI_FED(int ID, const char* szAxes, const int* piEdgeArray, const int* piParamArray);
BOOL PI_FUNC_DECL PI_qFRF(int ID, const char* szAxes, BOOL* pbValueArray);
BOOL PI_FUNC_DECL PI_DIO(int ID, const int* piChannelsArray, const BOOL* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qDIO(int ID, const int* piChannelsArray, BOOL* pbValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qTIO(int ID, int* piInputNr, int* piOutputNr);
BOOL PI_FUNC_DECL PI_IsControllerReady(int ID, int* piControllerReady);
BOOL PI_FUNC_DECL PI_qSRG(int ID, const char* szAxes, const int* iRegisterArray, int* iValArray);
BOOL PI_FUNC_DECL PI_ATC(int ID, const int* piChannels, const int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qATC(int ID, const int* piChannels, int* piValueArray, int iArraySize);
BOOL PI_FUNC_DECL PI_qATS(int ID, const int* piChannels, const int* piOptions, int* piValueArray, int iArraySize);
/////////////////////////////////////////////////////////////////////////////
// Macro commande
BOOL PI_FUNC_DECL PI_IsRunningMacro(int ID, BOOL* pbRunningMacro);
BOOL PI_FUNC_DECL PI_MAC_BEG(int ID, const char* szMacroName);
BOOL PI_FUNC_DECL PI_MAC_START(int ID, const char* szMacroName);
BOOL PI_FUNC_DECL PI_MAC_NSTART(int ID, const char* szMacroName, int nrRuns);
BOOL PI_FUNC_DECL PI_MAC_END(int ID);
BOOL PI_FUNC_DECL PI_MAC_DEL(int ID, const char* szMacroName);
BOOL PI_FUNC_DECL PI_MAC_DEF(int ID, const char* szMacroName);
BOOL PI_FUNC_DECL PI_MAC_qDEF(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qMAC(int ID, const char* szMacroName, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_qRMC(int ID, char* szBuffer, int iBufferSize);
BOOL PI_FUNC_DECL PI_DEL(int ID, int nMilliSeconds);
BOOL PI_FUNC_DECL PI_WAC(int ID, const char* szCondition);
BOOL PI_FUNC_DECL PI_MEX(int ID, const char* szCondition);