PI_Programming_Files_PI_GCS2_DLL/PI_GCS2.cs


        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DFH")]           public static extern int DFH(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDFH")]          public static extern int qDFH(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_GOH")]           public static extern int GOH(int ID, string sAxes);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qCST")]          public static extern int qCST(int ID, string sAxes, StringBuilder sNames, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_CST")]           public static extern int CST(int ID, string sAxes, string sNames);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qVST")]          public static extern int qVST(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qPUN")]          public static extern int qPUN(int ID, string sAxes, StringBuilder sUnit, int iBufferSize);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SVO")]           public static extern int SVO(int ID, string sAxes, int[] iValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSVO")]          public static extern int qSVO(int ID, string sAxes, int[] iValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SMO")]           public static extern int SMO( int ID, string sAxes, int[] iValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSMO")]          public static extern int qSMO( int ID, string sAxes, int[] iValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DCO")]           public static extern int DCO(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDCO")]          public static extern int qDCO(int ID, string sAxes, int[] bValueArray);
		[DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_BRA")]           public static extern int BRA(int ID, string sAxes, int[] iValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qBRA")]          public static extern int qBRA(int ID, string sAxes, int[] iValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_RON")]           public static extern int RON(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qRON")]          public static extern int qRON(int ID, string sAxes, int[] bValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_VEL")]           public static extern int VEL(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qVEL")]          public static extern int qVEL(int ID, string sAxes, double[] dValueArray);
		
		[DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTCV")]          public static extern int qTCV(int ID, string sAxes, double[] dValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ACC")]           public static extern int ACC(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qACC")]          public static extern int qACC(int ID, string sAxes, double[] dValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DEC")]           public static extern int DEC(int ID, string sAxes, double[] dValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDEC")]          public static extern int qDEC(int ID, string sAxes, double[] dValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_VCO")]           public static extern int VCO(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qVCO")]          public static extern int qVCO(int ID, string sAxes, int[] bValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SPA")]           public static extern int SPA(int ID, string sAxes, uint[] iParameterArray, double[] dValueArray, string sStrings);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSPA")]          public static extern int qSPA(int ID, string sAxes, uint[] iParameterArray, double[] dValueArray, StringBuilder sStrings, int iMaxNameSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SEP")]           public static extern int SEP(int ID, string sPassword, string sAxes, uint[] iParameterArray, double[] dValueArray, string sStrings);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSEP")]          public static extern int qSEP(int ID, string sAxes, uint[] iParameterArray, double[] dValueArray, StringBuilder sStrings, int iMaxNameSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WPA")]           public static extern int WPA(int ID, string sPassword, string sAxes, uint[] iParameterArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_RPA")]           public static extern int RPA(int ID, string sAxes, int uiParameterArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SPA_String")]    public static extern int SPA_String(int ID, string sAxes, uint[] iParameterArray, string sStrings);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSPA_String")]   public static extern int qSPA_String(int ID, string sAxes, uint[] iParameterArray, StringBuilder sStrings, int iMaxNameSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SEP_String")]    public static extern int SEP_String(int ID, string sPassword, string sAxes, uint[] iParameterArray, string sStrings);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSEP_String")]   public static extern int qSEP_String(int ID, string sAxes, uint[] iParameterArray, StringBuilder sStrings, int iMaxNameSize);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_STE")]            public static extern int STE(int ID, string sAxes, double[] dOffsetArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSTE")]           public static extern int qSTE(int ID, string sAxes, double[] pdValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IMP")]            public static extern int IMP(int ID, string sAxes, double[] dImpulseSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IMP_PulseWidth")] public static extern int IMP_PulseWidth(int ID, char cAxis, double dOffset, int iPulseWidth);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qIMP")]           public static extern int qIMP(int ID, string sAxes, double[] dValueArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_SAI")]           public static extern int SAI(int ID, string sOldAxes, string sNewAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSAI")]          public static extern int qSAI(int ID, StringBuilder sAxes, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSAI_ALL")]      public static extern int qSAI_ALL(int ID, StringBuilder sAxes, int iBufferSize);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_CCL")]           public static extern int CCL(int ID, int iComandLevel, string sPassWord);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qCCL")]          public static extern int qCCL(int ID, ref int iComandLevel);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_AVG")]           public static extern int AVG(int ID, int iAverrageTime);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qAVG")]          public static extern int qAVG(int ID, ref int iAverrageTime);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qHAR")]          public static extern int qHAR(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qLIM")]          public static extern int qLIM(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTRS")]          public static extern int qTRS(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_FNL")]           public static extern int FNL(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_FPL")]           public static extern int FPL(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_FRF")]           public static extern int FRF(int ID, string sAxes);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_FED")]           public static extern int FED(int ID, string sAxes, int[] iEdgeArray, int[] piParamArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qFRF")]          public static extern int qFRF(int ID, string sAxes, int[] bValueArray);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DIO")]           public static extern int DIO(int ID, int[] iChannelsArray, int[] bValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qDIO")]          public static extern int qDIO(int ID, int[] iChannelsArray, int[] bValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qTIO")]          public static extern int qTIO(int ID, ref int iInputNr, ref int iOutputNr);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IsControllerReady")] public static extern int IsControllerReady(int ID, ref int iControllerReady);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qSRG")]          public static extern int qSRG(int ID, string sAxes, int[] iRegisterArray, int[] iValArray);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_ATC")]           public static extern int ATC(int ID, int[] iChannels, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qATC")]          public static extern int qATC(int ID, int[] iChannels, int[] iValueArray, int iArraySize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qATS")]          public static extern int qATS(int ID, int[] iChannels, int[] iOptions, int[] iValueArray, int iArraySize);

        
        
        /////////////////////////////////////////////////////////////////////////////
        // Macro commande
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_IsRunningMacro")] public static extern int IsRunningMacro(int ID, int[] bRunningMacro);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MAC_BEG")]       public static extern int MAC_BEG(int ID, string sMacroName);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MAC_START")]     public static extern int MAC_START(int ID, string sMacroName);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MAC_NSTART")]    public static extern int MAC_NSTART(int ID, string sMacroName, int nrRuns);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MAC_END")]       public static extern int MAC_END(int ID);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MAC_DEL")]       public static extern int MAC_DEL(int ID, string sMacroName);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MAC_DEF")]       public static extern int MAC_DEF(int ID, string sMacroName);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MAC_qDEF")]      public static extern int MAC_qDEF(int ID, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qMAC")]          public static extern int qMAC(int ID, string sMacroName, StringBuilder sBuffer, int iBufferSize);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_qRMC")]          public static extern int qRMC(int ID, StringBuilder sBuffer, int iBufferSize);

        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_DEL")]           public static extern int DEL(int ID, int nMilliSeconds);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_WAC")]           public static extern int WAC(int ID, string sCondition);
        [DllImport("PI_GCS2_DLL.dll", EntryPoint = "PI_MEX")]           public static extern int MEX(int ID, string sCondition);

